--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,29 @@ body {
 .native-radio-button:checked + .check-toggle {
   background-color: #47c1b3;
 }
+
+.indicator {
+  width: 30px;
+  height: 30px;
+  background-color: rgba(218, 242, 239, 0);
+  box-shadow: 0 0 0 0 rgba(218, 242, 239, 0);
+  opacity: 0.7;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 7;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  animation: pulse 1s forwards;
+}
+
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(218, 242, 239, 0.7);
+  }
+  70% {
+    box-shadow: 0 0 0 100px rgba(218, 242, 239, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(218, 242, 239, 0);
+  }
+}
