--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ body {
   width: 100%;
   height: 70px;
   border-radius: 50%;
-  transition: all 1s 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: transform 0.3s 0.6s;
 }
 
 .radio-span--checked {
@@ -148,5 +148,47 @@ body {
   }
   100% {
     transform: scale(1);
+  }
+}
+
+@keyframes easeOutBounce {
+  0% {
+    transform: translateY(0);
+  }
+
+  12% {
+    transform: translateY(100px);
+  }
+
+  24% {
+    transform: translateY(110px);
+  }
+
+  36% {
+    transform: translateY(120px);
+  }
+
+  54% {
+    transform: translateY(130px);
+  }
+
+  74% {
+    transform: translateY(120px);
+  }
+
+  82% {
+    transform: translateY(124px);
+  }
+
+  92% {
+    transform: translateY(130px);
+  }
+
+  96% {
+    transform: translateY(127px);
+  }
+
+  100% {
+    transform: translateY(130px);
   }
 }
